[gd_scene load_steps=20 format=2]

[ext_resource path="res://Menus/HUD/Hud.gd" type="Script" id=1]
[ext_resource path="res://Menus/resources/white.png" type="Texture" id=2]
[ext_resource path="res://Objects/Game_modes/FFA/FFAMinimap.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menus/HUD/fistfinal.png" type="Texture" id=4]
[ext_resource path="res://Menus/HUD/scope3.png" type="Texture" id=5]
[ext_resource path="res://Menus/HUD/grenedefinal.png" type="Texture" id=6]
[ext_resource path="res://font.tres" type="DynamicFont" id=7]
[ext_resource path="res://Menus/HUD/pause3.png" type="Texture" id=8]
[ext_resource path="res://Antaro.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Menus/resources/next_gun.png" type="Texture" id=13]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 80, 40 )

[sub_resource type="CircleShape2D" id=3]
radius = 40.0

[sub_resource type="CircleShape2D" id=4]
radius = 45.0

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0.686275 )
shadow_size = 6

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0627451, 0.0627451, 0.0627451, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
shadow_size = 6

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0627451, 0.0627451, 0.0627451, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
shadow_size = 6

[sub_resource type="DynamicFont" id=8]
size = 24
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="StyleBoxFlat" id=9]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )

[node name="Hud" type="CanvasLayer" groups=[
"Hud",
]]
script = ExtResource( 1 )

[node name="reload" type="Panel" parent="."]
margin_left = 1092.0
margin_top = 7.0
margin_right = 1189.0
margin_bottom = 53.0
rect_scale = Vector2( 1.70963, 1.78606 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gun_s" type="TextureRect" parent="reload"]
margin_left = 3.0
margin_top = 3.0
margin_right = 94.0
margin_bottom = 43.0
rect_min_size = Vector2( 91, 40 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn" type="TouchScreenButton" parent="reload"]
visible = false
position = Vector2( 0, 4.76837e-07 )
scale = Vector2( 0.584922, 0.559892 )
shape = SubResource( 2 )

[node name="TextureProgress" type="TextureProgress" parent="reload"]
self_modulate = Color( 1, 1, 1, 0.470588 )
margin_left = 3.0
margin_top = 3.0
margin_right = 94.0
margin_bottom = 43.0
value = 50.0
texture_progress = ExtResource( 2 )
tint_progress = Color( 0.0156863, 0.956863, 0.0509804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="melee" type="TextureButton" parent="."]
margin_left = 715.197
margin_top = 596.27
margin_right = 830.197
margin_bottom = 702.27
rect_rotation = 11.8325
shortcut_in_tooltip = false
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="zoom" type="TextureButton" parent="."]
margin_left = 21.498
margin_top = 118.491
margin_right = 101.498
margin_bottom = 189.491
shortcut_in_tooltip = false
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="zoom" type="TouchScreenButton" parent="zoom"]
position = Vector2( 1.1376, -4.55041 )
shape = SubResource( 3 )

[node name="HE" type="TextureButton" parent="."]
margin_left = 375.67
margin_top = 610.823
margin_right = 474.67
margin_bottom = 694.823
rect_rotation = 8.39806
shortcut_in_tooltip = false
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HE" type="TouchScreenButton" parent="HE"]
position = Vector2( 5.62723, 2.88458 )
shape = SubResource( 4 )

[node name="pause" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -622.453
margin_top = 14.24
margin_right = -539.453
margin_bottom = 92.24
texture_normal = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.705882 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -202.708
margin_top = -254.771
margin_right = 152.292
margin_bottom = 171.229
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Button" parent="Panel2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.5
margin_top = -155.0
margin_right = 37.5007
margin_bottom = -113.0
rect_scale = Vector2( 1.5, 1.5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 7 )
text = "Score Board"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="Panel2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.5
margin_top = -63.0
margin_right = 37.5007
margin_bottom = -21.0002
rect_scale = Vector2( 1.5, 1.5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 7 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="Panel2"]
anchor_left = 0.5
anchor_top = 0.564
anchor_right = 0.5
anchor_bottom = 0.564
margin_left = -127.5
margin_top = 91.645
margin_right = 37.499
margin_bottom = 133.645
rect_scale = Vector2( 1.5, 1.5 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 7 )
text = "Quit Server"

[node name="Tween" type="Tween" parent="."]

[node name="respawn" type="ProgressBar" parent="."]
visible = false
margin_left = 512.608
margin_top = 537.777
margin_right = 711.608
margin_bottom = 568.777
custom_fonts/font = ExtResource( 7 )

[node name="Label" type="Label" parent="respawn"]
margin_left = -176.127
margin_top = 2.21606
margin_right = -30.1271
margin_bottom = 36.2161
custom_fonts/font = ExtResource( 7 )
text = "Respawning"

[node name="kill_msg" type="VBoxContainer" parent="."]
margin_left = 19.9276
margin_top = 261.608
margin_right = 319.928
margin_bottom = 509.608
custom_constants/separation = 8
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="1" type="Label" parent="kill_msg"]
margin_right = 300.0
margin_bottom = 24.0
rect_clip_content = true
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 0, 0, 1 )

[node name="2" type="Label" parent="kill_msg"]
margin_top = 32.0
margin_right = 300.0
margin_bottom = 56.0
rect_clip_content = true
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 0, 0, 1 )

[node name="3" type="Label" parent="kill_msg"]
margin_top = 64.0
margin_right = 300.0
margin_bottom = 88.0
rect_clip_content = true
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 0, 0, 1 )

[node name="4" type="Label" parent="kill_msg"]
margin_top = 96.0
margin_right = 300.0
margin_bottom = 120.0
rect_clip_content = true
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 0, 0, 1 )

[node name="5" type="Label" parent="kill_msg"]
margin_top = 128.0
margin_right = 300.0
margin_bottom = 152.0
rect_clip_content = true
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 0, 0, 1 )

[node name="6" type="Label" parent="kill_msg"]
margin_top = 160.0
margin_right = 300.0
margin_bottom = 184.0
rect_clip_content = true
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 0, 0, 1 )

[node name="7" type="Label" parent="kill_msg"]
margin_top = 192.0
margin_right = 300.0
margin_bottom = 216.0
rect_clip_content = true
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 0, 0, 1 )

[node name="8" type="Label" parent="kill_msg"]
margin_top = 224.0
margin_right = 300.0
margin_bottom = 248.0
rect_clip_content = true
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 0, 0, 1 )

[node name="nextGun" type="TextureButton" parent="."]
margin_left = 1088.55
margin_top = 9.98502
margin_right = 1128.55
margin_bottom = 49.985
rect_scale = Vector2( -1.8, 1.8 )
texture_normal = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Minimap" type="Panel" parent="."]
margin_left = 1019.83
margin_top = 115.638
margin_right = 1275.83
margin_bottom = 271.638
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Minimap" parent="Minimap" instance=ExtResource( 3 )]
self_modulate = Color( 1, 1, 1, 0.588235 )
margin_left = 3.0
margin_top = 3.0
margin_right = 247.28
margin_bottom = 147.4

[node name="fps" type="Label" parent="."]
margin_left = 111.0
margin_top = 9.0
margin_right = 158.0
margin_bottom = 25.0

[node name="fps_timer" type="Timer" parent="."]
[connection signal="pressed" from="reload/btn" to="." method="_on_btn_pressed"]
[connection signal="pressed" from="zoom/zoom" to="." method="_on_zoom_pressed"]
[connection signal="pressed" from="HE/HE" to="." method="_on_HE_pressed"]
[connection signal="pressed" from="pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="Panel2/score" to="." method="_on_score_pressed"]
[connection signal="pressed" from="Panel2/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Panel2/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="nextGun" to="." method="_on_nextGun_pressed"]
[connection signal="timeout" from="fps_timer" to="." method="_on_fps_timer_timeout"]
